# gator-app

./: .env.example  .flake8  .flaskenv  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: epic.md
.github/workflows/: format.yml  lint.yml  pytest.yml  release.yml
config/: app_settings.py  elasticsearch.py  elasticsearch.yml  gunicorn.py  repolist.example.yml  utils.py
docs/: develop-native.md
gator/: app.py  cli.py  extensions.py
gator/api/: __init__.py
gator/api/helpers/: __init__.py  mongoengine.py  pagination.py  string.py
gator/api/resources/: courses.py  organisations.py
gator/api/schemas/: __init__.py  common.py  timetable.py
gator/blueprints/: __init__.py  ping.py
gator/cli/: __init__.py  data.py  helpers.py  utils.py
gator/data/: dataset.py  repo.py  utils.py
gator/data/pipeline/: __init__.py  repo.py  sources.py  transforms.py
gator/data/pipeline/datasets/: __init__.py  io.py  ops.py  primitives.py
gator/data/providers/: common.py  repolist.py  repos.py
gator/data/providers/uoft/: utsg.py
gator/data/utils/: __init__.py  hash.py  io.py  serialization.py
gator/extensions/: db.py  elasticsearch.py  repolist.py
gator/graphql/: __init__.py
gator/graphql/objects/: common.py  timetable.py
gator/graphql/schemas/: __init__.py  timetable.py
gator/models/: __init__.py  common.py  timetable.py
src/gator/app/: __init__.py  models.py
src/gator/app/api/: __init__.py
src/gator/app/api/helpers/: pagination.py  string.py
src/gator/app/api/resources/: buildings.py  courses.py  institutions.py  organisations.py  patch_swagger.py
src/gator/app/blueprints/: __init__.py
src/gator/app/cli/: __init__.py  data.py  storage.py
src/gator/app/extensions/: dataset_registry.py  db.py  elasticsearch.py  record_storage.py  repolist.py
src/gator/app/storage/: __init__.py  base.py  disk.py  in_memory.py
src/gator/datasets/: __init__.py
src/gator/datasets/uoft/: __init__.py  ttb.py  utsg.py
tests/: __init__.py
tests/data/: test_file_dataset.py  test_http_response_dataset.py
tests/data/utils/: test_io.py
tests/datasets/uoft/: test_ttb.py
tests/storage/: base_test.py  test_disk.py  test_mem.py
