[tool.poetry]
name = "gator"
version = "0.1.0"
description = "Central dataset aggregator and content manager for sqrl planner"
authors = ["galacticglum <verchshon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
flask-mongoengine = "^1.0.0"
flask-restx = "^0.5.1"
Routes = "^2.5.1"
PyYAML = "^6.0"
inflection = "^0.5.1"
bs4 = "^0.0.1"
requests = "^2.28.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-httpserver = "^1.0.4"
typer = "^0.4.1"
colorama = "^0.4.5"
shellingham = "^1.4.0"
tabulate = "^0.8.9"
tqdm = "^4.64.0"
yaspin = "^2.1.0"
setuptools = "^62.5.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
flake8 = "^4.0.1"
pydocstyle = "^6.1.1"
autopep8 = "^1.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
