[tool.poetry]
name = "gator-app"
version = "0.1.0"
description = " A CLI and web API for centralized dataset aggregation and content management"
authors = ["galacticglum <verchshon@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
    { include = "gator", from = "src" }
]
include = [
    { path = "tests", format = "sdist" }
]
exclude = [
    "**/*.pyc",
    "**/*.pyi",
]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
flask-mongoengine = "^1.0.0"
flask-restx = "^1.0.3"
PyYAML = "^6.0"
inflection = "^0.5.1"
typer = "^0.4.1"
colorama = "^0.4.5"
shellingham = "^1.4.0"
tabulate = "^0.8.9"
tqdm = "^4.64.0"
yaspin = "^2.1.0"
setuptools = "^65.6.3"
gunicorn = "^20.1.0"
marshmallow = "<4"
flask-accepts = "^0.18.4"
gator-core = "^1.1.4"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-mock = "^3.7.0"
pytest-httpserver = "^1.0.4"

[tool.poetry.scripts]
gator = "gator.app.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["gator/**", "tests/**"]
exclude = ["**/__pycache__"]

typeCheckingMode = "basic"
pythonVersion = "3.9"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

# This is required as the CI pre-commit does not download required modules
reportMissingImports = "none"
